# DeepSpec

./: CONTRIBUTING.md  README.md  SECURITY.md  eval.py  pyproject.toml  requirements.txt  test.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
config/dflash/: dflash_gemma4_12b.py  dflash_qwen3_14b.py  dflash_qwen3_4b.py  dflash_qwen3_8b.py
config/dspark/: dspark_qwen3_4b_online.py
deepspec/data/: __init__.py  cuda_prefetcher.py  jsonl_dataset.py  target_cache_dataset.py
deepspec/eval/: base_evaluator.py
deepspec/eval/dspark/: confidence_head.py  evaluator.py
deepspec/modeling/: target_extract.py
deepspec/modeling/dspark/: common.py  loss.py
deepspec/modeling/dspark/gemma4/: config.py  modeling.py
deepspec/modeling/dspark/qwen3/: config.py  modeling.py
deepspec/modeling/eagle3/: common.py
deepspec/trainer/: base_trainer.py  dspark_trainer.py  eagle3_trainer.py
deepspec/utils/: __init__.py  device.py  optim.py  sampling.py
scripts/data/: README.md  estimate_target_cache_size.py  generate_train_data.py  launch_sglang_server.sh  prepare_data.sh  prepare_target_cache.py
scripts/train/: train.sh
tests/: test_online_target_extract.py
